--- a/bibliography.bib
+++ b/bibliography.bib
@@ -491,6 +491,13 @@ doi = {10.1093/mind/LIX.236.433},
 URL = {http://dx.doi.org/10.1093/mind/LIX.236.433},
 eprint = {/oup/backfile/content_public/journal/mind/lix/236/10.1093_mind_lix.236.433/1/433.pdf}
 }
+@misc{vian1953,
+	author={Boris Vian},
+	year={1953},
+	title={``Un robot-poète ne nous fait pas peur'', {L}ettre à {A}ndré {P}arinaud},
+	month={avril},
+	note={[En ligne, version manuscrite disponible sur \url{http://www.andre-parinaud.fr/robots-vian.html}, dernier accès 17 juin 2018]}
+	}
 @misc{wiki:fog,
  	author = "{Wikipedia contributors}",
  	title = "Natural language generation --- {W}ikipedia{,} The Free Encyclopedia",
